<resources>
    <string name="app_name">Studio MIND TIME</string>
    <string name="app_title">Studio MIND TIME</string>
    <string name="cancel">Annulla</string>
    <string name="continue_button">Continua</string>
    <string name="back_button">Indietro</string>
    <string name="close_button">Chiudi</string>
    <string name="ok_button">OK</string>
    <string name="scale_responses_count">%1$d/%2$d risposte</string>
    <string name="welcome_title">Studio MIND TIME</string>
    <string name="welcome_subtitle">Capire il nostro rapporto con i Social Media</string>
    <string name="welcome_what_we_do_title">Cosa farai</string>
    <string name="welcome_what_we_do_content">• Compilerai un questionario iniziale (10 min)\n• Compilerai un breve questionario, 1 volta al mese, per 4 mesi (5 min)\n• Forse, ti chiederemo di ridurre il tempo che trascorri su alcune app</string>
    <string name="welcome_privacy_title">La tua privacy</string>
    <string name="welcome_privacy_content">• L\'App raccoglierà solo dati anonimi: sia sull\'uso delle app social, che sulle risposte ai questionari.\n• Non sei identificabile tramite i dati che ci fornisci e tutti i dati rimangono crittografati, sicuri e inviati solo a server dell\'Università di Torino.\n• La partecipazione è completamente volontaria. Puoi ritirarti in qualsiasi momento senza conseguenze, e i tuoi dati verranno eliminati.</string>
    <string name="welcome_more_info">Maggiori informazioni sullo studio</string>
    <string name="welcome_info_url">https://studioscreentime.my.canva.site/linktree</string>
    <string name="privacy_url">https://drive.google.com/file/d/1QNKl_yjExDtf7TTA7ZDu-sDF55g93tdR/view?usp=drive_link</string>
    <string name="consent_title">Consenso informato</string>
    <string name="consent_subtitle">Leggi attentamente prima di procedere</string>
    <string name="permission_title">Permessi necessari</string>
    <string name="permission_explanation">Per funzionare correttamente, l\'app necessita dei seguenti permessi:</string>
    <string name="permission_usage_title">Statistiche di utilizzo</string>
    <string name="permission_usage_description">Per raccogliere dati anonimi sull\'uso delle app social.</string>
    <string name="permission_usage_help">Non riesci ad attivarlo? Consulta la guida</string>
    <string name="permission_notification_title">Notifiche</string>
    <string name="permission_notification_description">Per ricordarti di compilare i questionari mensili</string>
    <string name="permission_status_denied">Non concesso</string>
    <string name="permission_grant_usage_button">Concedi permesso statistiche</string>
    <string name="permission_grant_notification_button">Concedi permesso notifiche</string>
    <string name="permission_battery_title">Ottimizzazione batteria</string>
    <string name="permission_battery_description">Per garantire la raccolta dati in background senza interruzioni</string>
    <string name="permission_grant_battery_button">Disabilita ottimizzazione</string>
    <string name="thank_you_title">Hai completato tutti i questionari</string>
    <string name="thank_you_message">Grazie mille davvero per aver partecipato allo studio, da parte di tutto il team di ricerca di Mind Time.\n\nIl tuo contributo è anonimo, al sicuro e preziosissimo per capire meglio il nostro rapporto con i Social Media.</string>
    <string name="thank_you_counseling_title">Lo sportello psicologico di Ateneo</string>
    <string name="thank_you_counseling_content">Ricorda, se hai bisogno è sempre disponibile Lo Spazio di Ascolto dell\'Università di Torino: un servizio gratuito rivolto a studenti e studentesse dell\'Università di Torino che vivono situazioni di disagio o di malessere psico-fisico.</string>
    <string name="thank_you_counseling_button">Scopri di più</string>
    <string name="a11y_app_logo">Logo Studio MIND TIME</string>
    <string name="a11y_usage_permission_status">Stato permesso statistiche di utilizzo</string>
    <string name="a11y_notification_permission_status">Stato permesso notifiche</string>
    <string name="a11y_battery_permission_status">Stato ottimizzazione batteria</string>
</resources>